# ministry-of-pup

./: .Dockerfile  .dockerignore  README.md  package.json
.archive/booking-hyperapp/: README.md  package.json
.archive/functions/: .firebaserc  package.json
.archive/rapi-getdogs/: .gitignore  Cargo.toml  README.md
admin/: .firebaserc  README.md  firebase.json  package-lock.json  package.json  vue.config.js
admin/public/: index.html  manifest.json  manifest.webmanifest
admin/src/: App.vue  firebase.js  main.js
api/: .Dockerfile  .Dockerfile_DIRTY  .Dockerfile_DIRTY.dockerignore  .dockerignore  .gitignore  .http  README.md  mem.js  package-lock.json  package.json
api/scripts/: addBlockedDates.js  addBlockedTiming.js  makeAdmin.js  setOpeningSchedule.js
api/src/: index.js
appointment-src/: README.md  index.js  index.json  package.json
booking/: .firebaserc  .gitignore  README.md  firebase.json  package-lock.json  package.json
booking/hyperapp/: README.md  package-lock.json  package.json
booking/src/: App.vue  booking.js  cancel.js  cancelAppointment.js  complete.js  details.js  index.html  main.js  (+2 more)
functions/: README.md  package-lock.json  package.json
gapi/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  run.ps1
landing/: .eslintrc.cjs  .firebaserc  README.md  firebase.json  index.html  package-lock.json  package.json  tsconfig.json  vue.config.js
pdf/: README.md  commonUtils.js  index.js  invoice.js  package-lock.json  package.json  receipt.js  salesAgreement.js
rapi/: .http  Cargo.toml  README.md
rapi/src/: main.rs
(+162 files in other folders)
