[package]
name = "rapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://api.rocket.rs/v0.5-rc/rocket/#features
# Rocket gates certain features to avoid compiling unused dependencies so they have to be manually enabled
rocket = { version = "0.5.0-rc.2", features = ["json"] }